[metadata]
name = quantum_arbitrage
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A quantum arbitrage system for crypto markets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/quantum_arbitrage_system
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    ccxt
    numpy
    pandas

[options.packages.find]
where = src


